去掉core-test模块，去掉对超过java8api的使用